--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "public"]
 	path = public
-	url = git@github.com:crypti/frontend.git
+	url = https://github.com/catanoproject/frontend.git
 [submodule "test/cryptijs"]
 	path = test/cryptijs
-	url = git@github.com:crypti/crypti-js.git
+	url = https://github.com/catanoproject/crypti-js.git
