--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	},
 	"scripts": {
 		"start": "node app.js",
+		"debug": "node --inspect-brk app.js",
+		"docs:build": "jsdoc -c docs/conf.json --verbose --pedantic",
+		"docs:serve": "http-server docs/jsdoc/",
 		"test": "mocha",
 		"cov": "mocha --require blanket -R html-cov test/helpers test/logic > tmp/coverage.html"
 	},
@@ -80,7 +83,9 @@
 		"grunt-exec": "^0.4.6",
 		"grunt-jsdox": "~0.1.7",
 		"grunt-obfuscator": "^0.1.0",
+		"http-server": "0.11.1",
 		"js-nacl": "^0.6.0",
+		"jsdoc": "3.5.5",
 		"jsdox": "~0.4.9",
 		"lodash": "^3.10.1",
 		"mocha": "^2.2.5",
